apps/ssp/overlays/production/ssp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: "194.144.179.29/32,82.221.53.180/32,82.221.53.156/32,46.182.188.110/32,46.182.187.110/32,153.92.144.10/32,84.159.134.1/32,84.159.134.230/32,157.157.245.130/32"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://zenobia.skattur.is,https://chat.skattur.is,https://huginn.skattur.is"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
spec:
  rules:
    - host: admin.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: ssp
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - admin.contextsuite.com
      secretName: admin-contextsuite-com-tls
